webapp_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  namespace: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      web: app
  template:
    metadata:
      labels:
        web: app
    spec:
      containers:
        - name: webapp
          image: r0ckyou/app1
