webapp_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: dev 
spec:
  selector:
    web: app
  ports:
    - port: 8888
      targetPort: 8888
      protocol: TCP
      nodePort: 32222
  type: NodePort
