webapp_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
spec:
  rules:
    - http: 
        paths:
          - backend:
              service:
                name: webapp-service
                port:
                  number: 80
            pathType: Prefix
            path: /
